--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,18 @@
-<p>header works!</p>
+<div class="" style="width: 100vw;">
+    <img src="assets/images.nav.jpg" class="img-top" alt="...">
+
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">COMMANDES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">CONNEXION</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">S'INSCRIRE</a>
+        </li>
+    </ul>
+</div>
