--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,15 +1,17 @@
-<div class="" style="width: 100vw;">
-    <img src="assets/images.nav.jpg" class="img-top" alt="...">
-
-    <ul class="nav justify-content-center">
+<div class="cnt-header" style="width: 100vw;">
+  
+  
+  <!-- <img src="../../../../assets/images/logo.png" alt="" width="100"  class="d-inline-block align-text-top">       -->
+  <ul class="nav justify-content-center">
+      <!-- <img src="../../../../assets/images/bg.jpeg" class="img-top" alt="..."> -->
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">COMMANDES</a>
+          <a class="nav-link" routerLink="/produits/menus" href="#">COMMANDES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">CONNEXION</a>
+          <a class="nav-link" routerLink="/connexion" href="#">CONNEXION</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">S'INSCRIRE</a>
