--- a/src/app/client/components/card/card.component.html
+++ b/src/app/client/components/card/card.component.html
@@ -1,8 +1,9 @@
-<div class="card" style="width: 18rem;">
-    <img src="../../../../assets/images/bc.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Menu</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" routerLink="/produits/detail/1" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
+
+<div class="card " style="width: 18rem">
+  <h5 class="card-title text-center">Menu a</h5>
+
+  <a href="#" routerLink="/produits/detail/1" class="btn ">
+    <img src="../../../../assets/images/mc.jpg" class="card-img-top" alt="...">
+    <p class="card-text">2500f</p>
+  </a>
+</div>
