--- a/src/app/client/components/liste-card/liste-card.component.html
+++ b/src/app/client/components/liste-card/liste-card.component.html
@@ -1,1 +1,27 @@
-<p>liste-card works!</p>
+
+<h3 class="text-center"> Catlogues de Menus</h3>
+
+
+<div id="carouselExampleControls" class="carousel slide w-50 mb-5" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active w-100">
+        <a href="#" routerLink="/produits/menus" class="card-link">
+        <img  src="../../../../assets/images/mc.jpg" class="d-block w-100" alt="...">
+      </a>
+      </div>
+      <div class="carousel-item">
+        <img src="../../../../assets/images/ma.jpg" class="d-block w-50"  alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../../../../assets/images/mc.jpg" class="d-block w-50" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
