--- a/src/app/client/produit/catalogue/burger/burger.component.html
+++ b/src/app/client/produit/catalogue/burger/burger.component.html
@@ -1,5 +1,21 @@
 <app-header></app-header>
-<div class="row">
-  <app-card></app-card>
+<div class="container">
+
+  <h1 class="text-center">Burger à Commander</h1>
+
+      <div class="container d-flex justify-content-around flex-wrap">
+
+           <app-card></app-card>
+           <app-card></app-card>
+           <app-card></app-card>
+           <app-card></app-card>
+           <app-card></app-card>
+           <app-card></app-card>
+           <app-card></app-card>
+           <app-card></app-card>
+      
+      </div>
+
 </div>
+
 <app-footer></app-footer>
