--- a/src/app/client/produit/catalogue/menu/menu.component.html
+++ b/src/app/client/produit/catalogue/menu/menu.component.html
@@ -1,5 +1,17 @@
 <app-header></app-header>
-<div class="row">
-  <app-card></app-card>
+<div class="container">
+      <h1 class="text-center">Menu à Commander</h1>
+      <div class="container d-flex justify-content-around flex-wrap">
+        
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+      </div>
+
 </div>
 <app-footer></app-footer>
