--- a/src/app/client/produit/catalogue/menu/menu.component.html
+++ b/src/app/client/produit/catalogue/menu/menu.component.html
@@ -1,17 +1,3 @@
-<app-header></app-header>
-<div class="container">
-      <h1 class="text-center">Menu à Commander</h1>
-      <div class="container d-flex justify-content-around flex-wrap">
-        
-        <app-card></app-card>
-        <app-card></app-card>
-        <app-card></app-card>
-        <app-card></app-card>
-        <app-card></app-card>
-        <app-card></app-card>
-        <app-card></app-card>
-        <app-card></app-card>
-      </div>
+<app-prod></app-prod>
 
-</div>
-<app-footer></app-footer>
+<!-- <app-prod [produits]="menus"></app-prod> -->
