--- a/src/app/client/components/card/card.component.html
+++ b/src/app/client/components/card/card.component.html
@@ -1,9 +1,18 @@
 
-<div class="card " style="width: 18rem">
-  <h5 class="card-title text-center">Menu a</h5>
+<!-- <div class="card" style="width: 18rem">
+  <h5 class="">Menu a</h5>
 
   <a href="#" routerLink="/produits/detail/1" class="btn ">
     <img src="../../../../assets/images/mc.jpg" class="card-img-top" alt="...">
     <p class="card-text">2500f</p>
+  </a>
+</div> -->
+
+<div class="card" style="width: 18rem">
+  <h5 class="">Menu a</h5>
+
+  <a href="#" routerLink="/produit/detail/{{post?.id}}" class="btn ">
+    <img [src]="post?.image" class="card-img-top" alt="...">
+    <p class="card-text">{{post?.prix}}</p>
   </a>
 </div>
