--- a/src/app/client/produit/catalogue/burger/burger.component.html
+++ b/src/app/client/produit/catalogue/burger/burger.component.html
@@ -1,21 +1,1 @@
-<app-header></app-header>
-<div class="container">
-
-  <h1 class="text-center">Burger à Commander</h1>
-
-      <div class="container d-flex justify-content-around flex-wrap">
-
-           <app-card></app-card>
-           <app-card></app-card>
-           <app-card></app-card>
-           <app-card></app-card>
-           <app-card></app-card>
-           <app-card></app-card>
-           <app-card></app-card>
-           <app-card></app-card>
-      
-      </div>
-
-</div>
-
-<app-footer></app-footer>
+<app-prod></app-prod>
