--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -1,7 +1,16 @@
-.cnt-header{
-    background-color: black;
+.con{
+    height: 15vh;
+    background-image: url(../../../assets/images/bg.jpeg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: top;
+
 }
 .img-top{
     width: 100vw;
+    
+}
+.ko{
+    background-color: black;
 }
 
