--- a/src/app/client/components/liste-card/liste-card.component.html
+++ b/src/app/client/components/liste-card/liste-card.component.html
@@ -1,22 +1,35 @@
-    <!-- <h3> Catlogues de Menus</h3> -->
-    <div id="carouselExampleControls" class="carousel slide w-50" data-bs-ride="carousel">
-       <div class="carousel-inner">
-         <div class="carousel-item active w-100">
 
-            <a href="#" routerLink="/produits/menus" class="card-link">
-                <img  [src]="post?.image" class="d-block w-100" alt="...">
-            </a>
 
-          </div>
-       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-         <span class="visually-hidden">Previous</span>
-       </button>
-       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-         <span class="visually-hidden">Next</span>
-       </button>
-     </div>
+     <div id="carouselExampleIndicators" class="carousel slide w-50 ml-5" data-bs-ride="carousel">
+      <!-- <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div> -->
+      <div class="carousel-inner">
+        <a (click)="menuOuvert()">
+        <div class="carousel-item active">
+
+            <img src="../../../../assets/images/ma.jpg" class="d-block w-100" alt="...">
+
+        </div>
+        <div class="carousel-item">
+          <img src="../../../../assets/images/mb.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../../../assets/images/mc.jpg" class="d-block w-100" alt="...">
+        </div>
+      </a>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
 
 
@@ -46,4 +59,3 @@
 
 
 
-    
