--- a/src/app/client/produit/catalogue/burger/burger.component.html
+++ b/src/app/client/produit/catalogue/burger/burger.component.html
@@ -1,1 +1,6 @@
-<app-prod></app-prod>
+
+<ng-container *ngIf="(burgers$|async) as burgers">
+
+  <app-prod [prod]="burgers?.burger"></app-prod>
+
+</ng-container>
