--- a/src/app/client/produit/detail/detail.component.html
+++ b/src/app/client/produit/detail/detail.component.html
@@ -1,17 +1,30 @@
 <app-header></app-header>
 
 
-  <div class="container d-flex justify-content-around" >
+<!-- {{post?.id}} -->
+<!--
+<div class="container d-flex justify-content-around mt-5">
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img [src]="post$?.image" class="card-img-top" alt="...">
+    </div>
+<div>
+    <div class="card border-dark mb-3" style="max-width: 20rem;">
+      <div class="card-header">Description {{post?.nom}}</div>
       <div class="card-body">
-        <h5 class="card-title">Detail</h5>
+        <h4 class="card-title badge" style="background-color: #F4782F;">{{post?.nom}}Warning</h4>
+        <h5>Ingredients</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
-      
-      
+
+    <div class="d-grid gap-2">
+      <button class="btn btn-lg" style="background-color: #F4782F;" type="button">Ajouter dans mon panier</button>
+    </div>
+
+  </div> -->
+      <!-- <div class="card-body col-6">
+        <p class="card-text">{{post?.description}}</p>
         <a href="#" routerLink="" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">Ajout dans mon Panier</a>
-      </div>
+    </div> -->
+<!-- </div> -->
 <app-footer></app-footer>
