--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,18 +1,32 @@
-  <!-- <div class="con">     -->
-    <div class="con">
-      <img src="../../../../assets/images/logo.png" alt="" width="100"  class="d-inline-block align-text-top"> 
+
+    <div class="con" style="--bs-bg-opacity: .5;">
+      <img src="../../../../assets/images/logo.png" alt="" width="100"  class="d-inline-block align-text-top">
     </div>
   <div class="cnt-header ko">
-      
+
     <!-- <div class="w-100 fixed-top"> --> -->
-        <!-- <img src="../../../../assets/images/bg.jpeg" class=" w-100" alt="..."> 
+        <!-- <img src="../../../../assets/images/bg.jpeg" class=" w-100" alt="...">
      </div> -->
       <!-- <img src="../../../../assets/images/logo.png" alt="" width="100"  class="d-inline-block align-text-top">     -->
-      
+
       <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
             </li>
+
+
+
+
+            <!-- <div class="dropdown">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                COMMANDES
+              </a>
+
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Menu</a></li>
+                <li><a class="dropdown-item" href="#">Burger</a></li>
+              </ul>
+            </div> -->
             <li class="nav-item">
               <a class="nav-link" routerLink="/produits/menus" href="#">COMMANDES</a>
             </li>
@@ -30,7 +44,7 @@
 
 
 
-<!-- 
+<!--
   <nav class="navbar navbar-expand-lg navbar-dark ko ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
