Co-authored-by: AhmadouCAS <AhmadouCAS@users.noreply.github.com>

--- a/src/app/client/produit/catalogue/burger/burger.component.html
+++ b/src/app/client/produit/catalogue/burger/burger.component.html
@@ -1,6 +1,26 @@
 
-<ng-container *ngIf="(burgers$|async) as burgers">
+
+
+<!-- <ng-container *ngIf="(post$|async) as posts">
+
+  <app-prod [posts]="posts?."></app-prod>
+
+</ng-container> -->
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- {{burgers$|async|json}} -->
+<!-- <ng-container *ngIf="(burgers$|async) as burgers">
 
   <app-prod [prod]="burgers?.burger"></app-prod>
 
-</ng-container>
+</ng-container> -->
