--- a/src/app/client/produit/catalogue/menu/menu.component.html
+++ b/src/app/client/produit/catalogue/menu/menu.component.html
@@ -1,8 +1,6 @@
-
+<!--
 <ng-container *ngIf="(menus$|async) as menus">
 
-    <app-prod [prod]="menus?.menu"></app-prod>
+    <app-prod [prod]="menus?.burger"></app-prod>
 
-</ng-container>
-
-
+</ng-container> -->
