--- a/src/app/client/components/card/card.component.html
+++ b/src/app/client/components/card/card.component.html
@@ -5,10 +5,26 @@
 
   <a href="#" routerLink="/produits/detail/{{produit?.id}}" class="btn ">
 
-    <img src="data:images/png;base64,{{produit?.image}}" class="card-img-top" alt="...">
+    <img [src]="produit?.image" class="card-img-top" alt="...">
 
     <p class="card-text">{{produit?.prix}}</p>
 
   </a>
 
 </div>
+
+
+
+<!-- <div class="card" style="width: 18rem">
+
+  <h5 class="">{{produit?.nom}}</h5>
+
+  <a href="#" routerLink="/produits/detail/{{produit?.id}}" class="btn ">
+
+    <img src="data:images/png;base64,{{produit?.image}}" class="card-img-top" alt="...">
+
+    <p class="card-text">{{produit?.prix}}</p>
+
+  </a>
+
+</div> -->
