--- a/src/app/client/components/prod/prod.component.html
+++ b/src/app/client/components/prod/prod.component.html
@@ -5,9 +5,10 @@
 
       <div class="container d-flex justify-content-around flex-wrap">
 
-           <app-card  *ngFor="let produit of produits" [produit]="produit" ></app-card>
+           <app-card  *ngFor="let produit of produits" [burgers]="produit" ></app-card>
 
-          <!-- <app-card *ngFor="let post of posts$|async" [posts]="post"></app-card> -->
+          <!-- <app-card *ngFor="let post of posts|async" [posts]="post"></app-card> -->
+          <!-- <app-card *ngFor="let post of posts" [posts]="post"></app-card> -->
 
       </div>
 
