--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,29 +4,13 @@
     </div>
   <div class="cnt-header ko">
 
-    <!-- <div class="w-100 fixed-top"> --> -->
-        <!-- <img src="../../../../assets/images/bg.jpeg" class=" w-100" alt="...">
-     </div> -->
-      <!-- <img src="../../../../assets/images/logo.png" alt="" width="100"  class="d-inline-block align-text-top">     -->
 
       <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+              <a class="nav-link active" aria-current="page" href="#" [routerLink]="['']" routerLinkActive="active">ACCUEIL</a>
             </li>
 
 
-
-
-            <!-- <div class="dropdown">
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                COMMANDES
-              </a>
-
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Menu</a></li>
-                <li><a class="dropdown-item" href="#">Burger</a></li>
-              </ul>
-            </div> -->
             <li class="nav-item">
               <a class="nav-link" routerLink="/produits/menus" href="#">COMMANDES</a>
             </li>
@@ -38,51 +22,3 @@
             </li>
         </ul>
     </div>
-  <!-- </div> -->
-
-
-
-
-
-<!--
-  <nav class="navbar navbar-expand-lg navbar-dark ko ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Home
-              <span class="visually-hidden">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Separated link</a>
-            </div>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
- -->
